tests/react_refinements/react_refinements.exp
Error ----------------------------------------------------------------------------------------------------- test.js:16:7

Cannot cast `x` to number because null [1] is incompatible with number [2].

   test.js:16:7
   16|     {(x: number) /* should fail */}
             ^

References:
   test.js:15:15
   15|     <F x={x = null, 42}/>
                     ^^^^ [1]
   test.js:16:10
   16|     {(x: number) /* should fail */}
                ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:22:7

Cannot cast `x` to number because null [1] is incompatible with number [2].

   test.js:22:7
   22|     {(x: number) /* should fail */}
             ^

References:
   test.js:21:13
   21|   <F x={x = null, 42}>
                   ^^^^ [1]
   test.js:22:10
   22|     {(x: number) /* should fail */}
                ^^^^^^ [2]



Found 2 errors
